<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/branco"
    tools:context=".MainIntroducao">

    <Button
        android:id="@+id/botao_pular"
        android:layout_width="96dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/fonte_inter"
        android:text="@string/pular"
        android:textColor="@color/azul_escuro"
        android:background="@android:color/transparent"
        android:textSize="18sp"
        android:padding="4dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:alpha="0" />

    <Button
        android:id="@+id/fundo_caixa"
        android:layout_width="384dp"
        android:layout_height="480dp"
        app:backgroundTint="@color/azul_escuro"
        app:strokeColor="@color/azul_escuro"
        app:strokeWidth="5dp"
        app:cornerRadius="15dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:scaleType="fitCenter"
        android:alpha="0" />

    <ImageView
        android:id="@+id/apresentacao_image_um"
        android:layout_width="192dp"
        android:layout_height="192dp"
        android:src="@drawable/introducao_um"
        android:layout_marginBottom="250dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:scaleType="fitCenter"
        android:alpha="0" />

    <ImageView
        android:id="@+id/apresentacao_image_dois"
        android:layout_width="192dp"
        android:layout_height="192dp"
        android:src="@drawable/introducao_dois"
        android:layout_marginBottom="250dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:scaleType="fitCenter"
        android:alpha="0" />

    <TextView
        android:id="@+id/titulo_produtos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo_produtos"
        android:fontFamily="@font/fonte_inter"
        android:textSize="18sp"
        android:padding="32dp"
        android:textStyle="bold"
        android:textColor="@color/branco"
        android:textAlignment="textStart"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:alpha="0" />

    <TextView
        android:id="@+id/titulo_agendamentos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo_agendamentos"
        android:fontFamily="@font/fonte_inter"
        android:textSize="20sp"
        android:padding="32dp"
        android:textStyle="bold"
        android:textColor="@color/branco"
        android:textAlignment="textStart"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:alpha="0" />

    <TextView
        android:id="@+id/texto_produtos"
        android:layout_width="384dp"
        android:layout_height="wrap_content"
        android:text="@string/texto_introducao_produtos"
        android:fontFamily="@font/fonte_inter"
        android:textSize="14.5sp"
        android:textColor="@color/branco"
        android:textAlignment="center"
        android:layout_marginTop="235dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:alpha="0" />

    <TextView
        android:id="@+id/texto_agendamentos"
        android:layout_width="384dp"
        android:layout_height="wrap_content"
        android:text="@string/texto_introducao_agendamentos"
        android:fontFamily="@font/fonte_inter"
        android:textSize="14.5sp"
        android:textColor="@color/branco"
        android:textAlignment="center"
        android:layout_marginTop="235dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:alpha="0" />

    <Button
        android:id="@+id/botao_voltar"
        android:layout_width="96dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/fonte_inter"
        android:text="@string/voltar"
        android:textColor="@color/azul_escuro"
        android:background="@android:color/transparent"
        android:textSize="19sp"
        android:padding="4dp"
        android:layout_marginBottom="32dp"
        android:layout_marginStart="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:alpha="0" />

    <Button
        android:id="@+id/botao_avancar"
        android:layout_width="96dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/fonte_inter"
        android:text="@string/avancar"
        android:textColor="@color/azul_escuro"
        android:background="@android:color/transparent"
        android:textSize="19sp"
        android:padding="4dp"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:alpha="0" />

</androidx.constraintlayout.widget.ConstraintLayout>