<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/azul_escuro"
    tools:context=".MainInicio">

    <TextView
        android:id="@+id/texto_rodape"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/texto_slogan"
        android:fontFamily="@font/fonte_inter"
        android:textSize="13sp"
        android:padding="32dp"
        android:textStyle="bold"
        android:textColor="@color/branco"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="512dp"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/apresentacao_image_um"
            android:layout_width="168dp"
            android:layout_height="128dp"
            android:src="@drawable/icone_logotipo_texto"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:scaleType="fitCenter"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/botao_entrar"
            android:layout_width="320dp"
            android:layout_height="64dp"
            android:fontFamily="@font/fonte_inter"
            android:text="@string/entrar"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:textColor="@color/preto"
            app:backgroundTint="@color/branco"
            app:strokeColor="@color/branco"
            app:strokeWidth="6dp"
            app:cornerRadius="10dp"
            android:layout_marginTop="8px"
            android:layout_marginBottom="8px"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/botao_registrar"
            android:layout_width="320dp"
            android:layout_height="64dp"
            android:fontFamily="@font/fonte_inter"
            android:text="@string/registrar"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:textColor="@color/preto"
            app:backgroundTint="@color/branco"
            app:strokeColor="@color/branco"
            app:strokeWidth="6dp"
            app:cornerRadius="10dp"
            android:layout_marginTop="8px"
            android:layout_marginBottom="8px"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="128dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/botao_google"
                android:layout_width="128dp"
                android:layout_height="60dp"
                android:text="ㅤ"
                app:backgroundTint="@color/branco"
                app:strokeColor="@color/branco"
                app:strokeWidth="6dp"
                app:cornerRadius="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/image_google"
                android:layout_width="160dp"
                android:layout_height="28dp"
                android:scaleType="centerInside"
                android:src="@drawable/icone_google"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>